--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "axios": "^0.21.4",
         "laravel-mix": "^6.0.6",
         "laravel-vite-plugin": "^0.5.3",
-        "lodash": "^4.17.19",
+        "lodash": "^4.17.21",
         "postcss": "^8.1.14",
         "sass-loader": "^12.4.0",
         "vite": "^3.0.7",
@@ -32,6 +32,7 @@
         "vue-carousel": "^0.18.0",
         "vue-graph": "^0.8.7",
         "vue-html2pdf": "^1.8.0",
+        "vue-lodash": "^2.1.2",
         "vuejs-dialog": "^1.4.2"
     }
 }
