--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "inertiajs/inertia-laravel": "^0.4.2",
         "laravel/framework": "^8.40",
         "laravel/nexmo-notification-channel": "^2.5",
+        "laravel/octane": "^1.3",
         "laravel/tinker": "^2.5",
         "spatie/laravel-backup": "^6.16",
         "twilio/sdk": "^6.40"
